game-data-packager (22) UNRELEASED; urgency=low

  * don't mask non-zero exit status of dpkg-deb.
    Thanks Frédéric Brière. Closes: #532817.
  * shift '--' off the argument stack when encountered.
    Thanks Frédéric Brière. Closes: #532812.

 -- Jon Dowland <jon@alcopop.org>  Mon, 29 Jun 2009 21:54:47 +0100

game-data-packager (21) unstable; urgency=low

  * Upload to unstable.

 -- Jon Dowland <jon@alcopop.org>  Sun, 15 Mar 2009 19:25:38 +0000

game-data-packager (20) experimental; urgency=low

  * Remove debconf remnant. Closes: #500951. Thanks Frédéric Brière.
  * Remove useless menu. Closes: #500948. Thanks Frédéric Brière.
  * Update debhelper Build-Depends:. Closes: #500947. Thanks Frédéric Brière.

 -- Jon Dowland <jon@alcopop.org>  Sun, 18 Jan 2009 17:30:20 +0000

game-data-packager (19) unstable; urgency=low

  [ Gonéri Le Bouder ]
  * fix bashism, thanks Andres Mejia (Closes: #501173)  

 -- Jon Dowland <jon@alcopop.org>  Sun, 11 Jan 2009 17:17:42 +0100

game-data-packager (18) unstable; urgency=low

  * Provides: doom-package.

 -- Jon Dowland <jon@alcopop.org>  Wed, 06 Aug 2008 19:30:33 +0100

game-data-packager (17) unstable; urgency=low

  [ Jon Dowland ]
  * add a generic game-package binary
  * rename (again) to game-package

  [ Eddy Petrișor ]
  * add missing Vcs-Svn headers

  [ Jon Dowland ]
  * add support for (ultimate) doom
  * remove make-wad-package and references to it
  * remove (unfinished; not working) quake3 support
  * Stop maintaining an "internal" .deb version for
    the slipstream files, and instead install the
    game-package changelog into the .debs that that
    are built.
  * adjust priorities of official IWADs to conform to
    the doom packaging guidelines
  * clean up the tempdir used by the slipstream functions
  * rename (again again) to game-data-packager
  * fix debug() method so it does nothing if DEBUG is undefined
  * generalize entirely the *-wad directories to doom-common
