@@ -1,22 +1,0 @@
-#!/bin/sh
-# postinst script for IWAD
-set -e
-
-case "$1" in
-	configure)
-		update-alternatives --install \
-			/usr/share/games/doom/IWAD \
-			IWAD /usr/share/games/game-data-packager/IWAD \
-			50
-	;;
-
-	abort-upgrade|abort-remove|abort-deconfigure)
-	;;
-
-	*)
-		echo "unsupported method $1" >&2
-		exit 1
-		;;
-esac
-
-exit 0
