@@ -1,0 +1,22 @@
+#!/bin/sh
+# preinst script for IWAD
+set -e
+
+case "$1" in
+	upgrade)
+        if dpkg --compare-versions "$2" lt "22"; then
+			update-alternatives --remove IWAD \
+				/usr/share/games/game-data-packager/IWAD
+		fi
+	;;
+
+	install|abort-upgrade)
+	;;
+
+	*)
+		echo "unsupported method $1" >&2
+		exit 1
+		;;
+esac
+
+exit 0
