@@ -1,9 +1,8 @@
 [Desktop Entry]
-Name=GAME
-GenericName=LONG
-Comment=First Person Shooter Game
+Name=LONG
+GenericName=First Person Shooter Game
 TryExec=doom
-Exec=doom -iwad /usr/share/games/game-data-packager/GAME.wad
+Exec=doom -iwad /usr/share/games/doom/GAME.wad
 Icon=GAME.xpm
 Terminal=false
 Type=Application
